--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
     </div>
 
-    <audio src="music/JP Cooper- Beneath The Streetlights And The Moon (Audio + Lyrics) (1).mp3" class="main-song"></audio>
+    <audio src="music/y2mate.com - Beneath The Streetlights And The Moon.mp3" class="main-song"></audio>
 
 
     <script src="js files/playlist.js"></script>
