--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 <body>
+
+    <div class="loading-spinner" id="loading-spinner">
+        Loading...
+    </div>
+
+
+
+
+
     
     <div class="content">
         <div class="top-bar">
