--- a/index.html
+++ b/index.html
@@ -24,9 +24,16 @@
                 keyboard_double_arrow_down
             </span>
             <span class="top-text">Now Playing</span>
-            <span class="material-symbols-outlined">
-                more_horiz
+            <span class="material-symbols-outlined" id="more-options">
+                Lyrics
             </span>
+            <div id="lyrics-modal" class="modal">
+                <div class="modal-content">
+                    <span class="close-btn">&times;</span>
+                    <h2>Lyrics</h2>
+                    <p id="song-lyrics"></p>
+                </div>
+            </div>
         </div>
         <div class="image-wrapper">
             <div class="music-img">
