--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     <p id="song-lyrics"></p>
                 </div>
             </div>
+            <input type="range" id="volume-control" min="0" max="1" step="0.1" value="1">
         </div>
         <div class="image-wrapper">
             <div class="music-img">
